[package]
version = "0.1.2"
name = "swayfocus"
description = "Daemon for reducing opacity of non-focused sway windows."
readme = "README.md"

repository = "https://github.com/cauebs/swayfocus"
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.3"
i3ipc = "0.9.0"
signal-hook = "0.1.6"
structopt = "0.2.13"
daemonize = "0.3.0"
